--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0 ;
+
 }
 
 .logo {
