ExtraPages,Navigation,Firebase data get

--- a/src/Components/AdminPageCSS.css
+++ b/src/Components/AdminPageCSS.css
@@ -12,3 +12,9 @@
 .main{
     background-color:rgb(48, 48, 62) ;
 }
+
+.mainsecond{
+    background-color:rgb(48, 48, 62) ;
+    text-align: center;
+}
+
